2008-08-30	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Do not print errors when trying to detect the 
	  revision of a git svn repository.

2008-08-25	Brian Tarricone <kelnos@xfce.org>

	* exo-helper/exo-preferred-applications.desktop.in: Include
	  preferred apps dialog in new settings manager.

2008-08-12  Brian Tarricone <bjt23@cornell.edu>

	* exo-mount/exo-mount-hal.c: Add support for mounting and
	  unmounting encrypted volumes.  Patch from Colin Leroy.
	  Bug #3349.

200-07-26	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Add @REVISION@ substitution support for git svn 
	  repositories.

2008-07-17	Nick Schermer <nick@xfce.org>

	* exo-csource/main.c: Don't strip text between nodes 
	  with --strip-content. This will make stripping work
	  on glade files.
	* configure.in.in: Version bump from 0.3.7 to 0.3.7.1.

2007-12-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2007-12-02	Benedikt Meurer <benny@xfce.org>

	* === Released 0.3.4 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.
	* docs/reference/Makefile.am: Fix dist building.

2007-07-20	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mount-point.c: Fix build on Solaris.

2007-05-22	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-string.{c,h}, exo/exo.symbols: Add new
	  function exo_strdup_strftime(), which is an UTF-8 aware wrapper
	  for strftime().
	* docs/reference/: Update reference manual.

2007-05-22	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Prefer -lmd over -lmd5.
	* docs/reference/: Update reference manual.

2007-05-20	Benedikt Meurer <benny@xfce.org>

	* exo-csource/main.c: Add support to strip comments and node contents
	  from XML files. Based on patch from Nick Schermer <nick@xfce.org>.
	  Bug #3094.
	* po/*.po, po/*.pot: Merge new strings.
	* po/de.po: Update german translations.

2007-05-09	Benedikt Meurer <benny@xfce.org>
